--- a/indexCSS.css
+++ b/indexCSS.css
@@ -1,31 +1,49 @@
 body{
-    margin: 0px;
+    margin: 120px 0px 0px 0px;
 }
 /*ヘッダー*/
 header{
+    position: fixed;
+    top: 0px;
     background-color: aquamarine;
     padding:10px;
+    width: 100%;
 }
 .logo{
+    text-shadow: 5px 5px 10px #15ff00;
     font-size: 30px;
-    color: green;
-    background-color: rgb(189, 255, 189);
-    border: solid 1px;
-    border-radius: 10px;
-    padding: 5px;
+    font-weight: bold;
+    color: #043500;
 }
 .headerLink,li{
     display: inline;
+    position: relative;
+    left: -30px;
     margin-left: 20px;
 }
 header a:link{color: black; text-decoration: none;}
 header a:visited{color: black;}
 header a:hover{color: green;}
 footer a:active{color: orange;}
+
+/*メイン*/
+.days{
+    background: linear-gradient(90deg, #1C1C1C 0%, #CCCCCC 100%) no-repeat 50% 50% / 100% 100%;
+    color: white;
+    padding: 50px;
+}
+.p1,.p2,.p3{
+    margin: 2px;
+    padding: 70px 0px 70px 0px;
+    background: linear-gradient(#91FFAF 0%, #1DE103 100%) no-repeat 50% 50% / 100% 100%;
+    text-align: center;
+}
+
 /*フッター*/
 footer{
     color: white;
     background-color: rgb(54, 54, 54);
+    padding: 10px;
 }
 footer a:link{color: white; text-decoration: none;}
 footer a:visited{color: white;}
