--- a/indexCSS.css
+++ b/indexCSS.css
@@ -1,13 +1,20 @@
 body{
-    margin: 120px 0px 0px 0px;
+    margin: 100px 0px 0px 0px;
 }
 /*ヘッダー*/
 header{
     position: fixed;
     top: 0px;
     background-color: aquamarine;
-    padding:10px;
+    padding: 5px;
     width: 100%;
+    display: flex;
+    align-items: center;
+    box-sizing: border-box;
+    box-shadow: -2px 5px 20px 11px rgba(0, 0, 0, 0.1);
+}
+nav{
+    margin: 0 0 0 auto;
 }
 .logo{
     text-shadow: 5px 5px 10px #15ff00;
@@ -15,11 +22,12 @@ header{
     font-weight: bold;
     color: #043500;
 }
-.headerLink,li{
-    display: inline;
-    position: relative;
-    left: -30px;
-    margin-left: 20px;
+.headerLink li{
+    margin: 0 30px 0 0;
+}
+.headerLink ul{
+    display: flex;
+    list-style: none;
 }
 header a:link{color: black; text-decoration: none;}
 header a:visited{color: black;}
@@ -27,15 +35,25 @@ header a:hover{color: green;}
 footer a:active{color: orange;}
 
 /*メイン*/
+.title{
+    font-size: 7vw;
+    padding: 0 0 0 5px;
+}
 .days{
     background: linear-gradient(90deg, #1C1C1C 0%, #CCCCCC 100%) no-repeat 50% 50% / 100% 100%;
     color: white;
-    padding: 50px;
+    padding: 10px;
 }
-.p1,.p2,.p3{
-    margin: 2px;
+.divBig{
+    margin: 0px;
     padding: 70px 0px 70px 0px;
-    background: linear-gradient(#91FFAF 0%, #1DE103 100%) no-repeat 50% 50% / 100% 100%;
+    background-color: greenyellow;
+    font-size: 4vmax;
+    text-align: center;
+}
+.pBig{
+    margin: 0px;
+    padding: 70px 0px 70px 0px;
     text-align: center;
 }
 
