--- a/indexCSS.css
+++ b/indexCSS.css
@@ -1,5 +1,5 @@
 body{
-    margin: 100px 0px 0px 0px;
+    margin:0px;
     text-decoration: none;
 }
 
@@ -38,8 +38,19 @@ footer a:active{color: orange;}
 /*メイン*/
 .title{
     font-size: 8vw;
-    padding: 0 0 0 5px;
-    margin: 0 0 10px 0;
+    color: white;
+    text-shadow: 0px 0px 12px rgba(0, 0, 0, 1);
+    padding: 100px 0 0 15px;
+    margin: 0 0 0px 0;
+    background-size: 20px 20px;
+    background-color: #43A047;
+    background-image:
+    linear-gradient(45deg, rgba(56, 142, 60, 0.5) 25%, transparent 25%,
+    transparent 50%, rgba(56, 142, 60, 0.5) 50%, rgba(56, 142, 60, 0.5) 75%,
+    transparent 75%, transparent),
+    linear-gradient(-45deg, rgba(56, 142, 60, 0.5) 25%, transparent 25%,
+    transparent 50%, rgba(56, 142, 60, 0.5) 50%, rgba(56, 142, 60, 0.5) 75%,
+    transparent 75%, transparent);
 }
 .days{
     background: linear-gradient(90deg, #1C1C1C 0%, #CCCCCC 100%) no-repeat 50% 50% / 100% 100%;
