--- a/indexCSS.css
+++ b/indexCSS.css
@@ -7,7 +7,7 @@ body{
 header{
     position: fixed;
     top: 0px;
-    background-color: aquamarine;
+    background-color:rgb(102, 255, 140);
     padding: 5px;
     width: 100%;
     display: flex;
@@ -37,7 +37,7 @@ footer a:active{color: orange;}
 
 /*メイン*/
 .title{
-    font-size: 8vw;
+    font-size: 3em;
     color: white;
     text-shadow: 0px 0px 12px rgba(0, 0, 0, 1);
     padding: 100px 0 0 15px;
