--- a/indexCSS.css
+++ b/indexCSS.css
@@ -62,7 +62,7 @@ footer a:active{color: orange;}
     margin: 0px;
     padding: 80px 0px 80px 0px;
     background-color: greenyellow;
-    font-size: 4vmax;
+    font-size: 2em;
     font-weight: bold;
     text-align: center;
 }
