--- a/indexCSS.css
+++ b/indexCSS.css
@@ -1,6 +1,7 @@
 body{
     margin:0px;
     text-decoration: none;
+    font-family: 'Helvetica Neue','Helvetica','Arial',sans-serif;
 }
 
 /*ヘッダー*/
@@ -17,11 +18,11 @@ header{
 }
 nav{margin: 0 0 0 auto;}
 .logo{
-    font-family: 'Georgia',sans-serif;
     text-shadow: 5px 5px 10px #15ff00;
     font-size: 30px;
     font-weight: bold;
     color: #043500;
+    padding: 5px;
 }
 .headerLink li{
     margin: 0 30px 0 0;
@@ -72,7 +73,10 @@ footer a:active{color: orange;}
     text-align: center;
 }
 main a:link{text-decoration: none;}
-
+.pBig a{
+    font-size: 1.2em;
+    color: rgb(1, 173, 1);
+}
 
 /*フッター*/
 footer{
