--- a/history/historyCSS.css
+++ b/history/historyCSS.css
@@ -1,6 +1,7 @@
 body{
     margin:0px;
     text-decoration: none;
+    font-family: 'Helvetica Neue','Helvetica','Arial',sans-serif;
 }
 
 /*ヘッダー*/
@@ -22,6 +23,7 @@ nav{margin: 0 0 0 auto;}
     font-size: 30px;
     font-weight: bold;
     color: #043500;
+    padding: 5px;
 }
 .headerLink li{
     margin: 0 30px 0 0;
@@ -60,6 +62,7 @@ details{
     margin: 10px;
     height: 1em;
     transition: .5s;
+    margin-bottom: 2em;
 }
 details[open]{
     font-size: 1.2em;
