--- a/developmentProducts/developmentProductsCSS.css
+++ b/developmentProducts/developmentProductsCSS.css
@@ -1,6 +1,7 @@
 body{
     margin:0px;
     text-decoration: none;
+    font-family: 'Helvetica Neue','Helvetica','Arial',sans-serif;
 }
 
 /*ヘッダー*/
@@ -23,6 +24,7 @@ nav{margin: 0 0 0 auto;}
     font-size: 30px;
     font-weight: bold;
     color: #043500;
+    padding: 5px;
 }
 .headerLink li{
     margin: 0 30px 0 0;
